# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.9.4_pre1 (26 Apr 2002)

  26 Apr 2002; Daniel Robbins <drobbins@gentoo.org> tarball.sh: no longer
  necessary for VERSION to equal "@portage_version@" to get the version
  auto-set.  VERSION can now be set to anything and tarball.sh will get it
  right.
  
  26 Apr 2002; Daniel Robbins <drobbins@gentoo.org> emerge: I've started work
  on revamping/improving the "blocks" system to get ready to fix bug #1891.
  Already fixed a bug where "blocks" ("!" deps) print out the wrong blocking
  package name. This is now fixed.  Blocks need additional testing.
  
  26 Apr 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, ebuild.sh, use:
  "use" is now a bash builtin function rather than an external python-based
  command.  This appears to fix the USE inconstencies, as it should, thereby
  closing bug #2000.

*portage-1.9.3 (24 Apr 2002)

  24 Apr 2002; Jon Nelson <jnelson@gentoo.org>: portage.py, chkcontents:
  Emulate fchksum's md5 checksum routine.  Closes bug #2787.
  
  23 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: invalid
  short options result in an exit.  Closes bug #2025.
  
  22 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: rsync zlib
  compression enabled by default.

*portage-1.9.2 (21 Apr 2002)

  21 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: signal
  handler now zaps /etc/ld.so.preload if it's there -- this prevents it
  from hanging around and causing sandbox badness.
  
  21 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: fixed an
  error where --emptytree mode wouldn't really have a fully empty tree,
  due to the emptytree.inject() coming before the emptytree.root=None;
  the inject() caused a recalc of the USE vars, which caused the tree
  to become partially populated and it wasn't cleared.  This closes bug
  #1897.
  