@@ -1,6 +1,17 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  29 Apr 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: Added support
+  for RESTRICT="nomirror".  If "mirror" is defined in FEATURES and "nomirror"
+  is defined in RESTRICT, then files will not be fetched.
+  
+  29 Apr 2002; Daniel Robbins <drobbins@gentoo.org> emerge: Fixed docs for
+  "unmerge", added docs for "--oneshot".  Closes bugs #2156 and #2182.
+
+  29 Apr 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: Fix for USE
+  troubles; confirmed by Azarah as working :)  Also, we now strip the path
+  from "KV" as we should.
+
 *portage-1.9.4_pre1 (26 Apr 2002)
 
   26 Apr 2002; Daniel Robbins <drobbins@gentoo.org> tarball.sh: no longer
